log
Thu Apr 16 08:05:01 PM UTC 2026: 
 hashmap.c | 81 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 71 insertions(+), 10 deletions(-)
 tests:  17|0
total_score: 60/60
59bfec4
Thu Apr 16 08:06:45 PM UTC 2026: 
 hashmap.c | 78 +++++----------------------------------------------------------
 1 file changed, 6 insertions(+), 72 deletions(-)
 tests:  0|7
total_score: 0/60
e7bf962
Thu Apr 16 08:10:28 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:16: error: too few arguments to function ‘hash’
   62 |     long pos = hash(key);
      |                ^~~~
hashmap.c:28:6: note: declared here
   28 | long hash( char * key, long capacity) {
      |      ^~~~
0192c5a
Thu Apr 16 08:11:21 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
b744a47
